--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,6 @@ body{
     border-color: #131823 !important;
     background-color: #131823 !important;
 }
+.bg-secondary{
+    background-color: #202938 !important;
+}
